# python-majordome

./: .buildinfo  .gitignore  .gitmodules  .nojekyll  CHANGELOG.md  Cargo.toml  Containerfile  LICENSE  README.md  SKILLS.md  TODO.md  _quarto.yaml  api.html  bashrc  build.ps1  build.sh  calphad.html  combustion.html  combustion_.html  common.html  common_.html  common_.ipynb  containerfile.sh  containerfile.txt  devel.html  develop.ps1  develop.sh  documents.html  engineering.html  fluent.html  genindex.html  index.html  index.qmd  kompanion.json  kompanion.vbs  magic.html  objects.inv  plug.html  plug_.html  plug_.ipynb  (+21 more)
bindings/rust/: Cargo.toml
crates/calphad/: Cargo.toml  lib.rs  mixture.rs  test.rs
crates/calphad/core/: composition.rs  constant.rs  mod.rs  parameterization.rs  substance.rs
crates/calphad/data/: mod.rs  path.rs
crates/calphad/equilibrium/: mod.rs
crates/calphad/parameters/: gibbs_polynomial.rs  maierkelley.rs  mod.rs  nasa.rs  shomate.rs
crates/calphad/src/: lib.rs
crates/corelib/: Cargo.toml
crates/corelib/src/: constants.rs  lib.rs
crates/diffusion/: Cargo.toml  coefficients.rs  fvm.rs  lib.rs  mod.rs  sample.lua  slycke.rs
crates/diffusion/interstitial/: mod.rs
crates/diffusion/src/: diffusivity.rs  slycke.rs
crates/fvm/: Cargo.toml  develop.py  domain1d.rs  lib.rs  prelude.rs
src/: Cargo.toml  build.rs  lib.rs  utils.rs  version.py
src/Diffusion/: Diffusion.Core.Tests.fsproj  Diffusion.Core.fsproj  Diffusion.Numerics.Tests.fsproj  Diffusion.Numerics.fsproj  Diffusion.Slycke.Tests.fsproj  Diffusion.Slycke.fsproj  Diffusion.Thermo.Tests.fsproj  Diffusion.Thermo.fsproj  Directory.Build.props
src/Diffusion.Core/: Carbonitriding1D.fs  Diffusion.Core.Tests.fsproj  Diffusion.Core.fsproj  DiffusionData1D.fs  ElementData.fs  EnthalpyEquation1D.fs  FunctionTypes.fs  FvmDomain1D.fs  GnuplotHandler.fs  Library.fs  MixtureProperties.fs  OperatingSystem.fs
src/Diffusion.Numerics/: Autodiff.fs  Diffusion.Numerics.Tests.fsproj  Diffusion.Numerics.fsproj  Library.fs  NumericalUtilities.fs  Tests.fs  TridiagonalSolver.fs
src/Diffusion.Slycke/: Diffusion.Slycke.Tests.fsproj  Diffusion.Slycke.fsproj  DiffusionPlainFeCN.fs  Library.fs
src/Diffusion.Thermo/: Diffusion.Thermo.Tests.fsproj  Diffusion.Thermo.fsproj  Library.fs
src/auchimiste/: AuChimiste.jl  MajordomeStyle.jl
src/calphad/: mod.rs
src/configuration/: Containerfile  bashrc  init.lua  requirements.txt  vimrc
src/configuration/nvim/: .gitignore  init.lua  install.sh
src/configuration/nvim/lsp/: rust.lua
src/core/: lib.rs
src/core/calphad/: core.rs  data.rs  equil.rs  functions.rs  mod.rs  usage.rs
src/core/diffusion/: mod.rs
src/core/num/: autodiff.rs  linear_algebra.rs  mod.rs
src/crates/calphad/src/: lib.rs
src/crates/corelib/src/: lib.rs
src/crates/diffusion/: Cargo.toml  diffusion.drawio
src/crates/diffusion/src/: lib.rs
src/entrypoints/: containerize.rs  diffusion_solver.rs  majordome.rs  mod.rs
src/kompanion/: README.md  aliases.ps1  helpers.ps1  kompanion.vbs  main.ps1
src/kompanion/configure/: _base.ps1  _lang.ps1  _simu.ps1
src/kompanion/data/: julia-packages.txt  kompanion.full.json  kompanion.json  kompanion.min.json  requirements-dev.txt  requirements.txt  wishlist.json
src/kompanion/install/: _base.ps1  _lang.ps1  _simu.ps1
src/kompanion/legacy/: README.md  activate.bat  base-quarto.bat  base-rust.bat  extra-elmer.bat  kompanion.ps1  mfix.bat  miniforge.bat  settings.json  utilities.ps1
src/kompanion/utils/: compression.ps1  messages.ps1  path.ps1  python.ps1
src/majordome/: Cargo.toml  __init__.py  _candidate.py  _readfile.py  _rustapi.py  _trash.py  cantera.py  cartography.py  combustion.py  common.py  constants.rs  elmer.py  energy.py  fluent.py  latex.py  lib.rs  meshing.py  mod.rs  parsing.py  plotting.py  plug.py  pybind.rs  radiation.py  reactor.py  skipper.py  transport.py  utils.py  vision.py  walang.py
src/majordome-apps/: internal-flow-su2.py
src/majordome-calphad/: Cargo.toml
src/majordome-corelib/: Cargo.toml  build.rs
src/majordome-corelib/src/: constants.rs  macros.rs  textfile.rs
src/majordome-diffusion/: Cargo.toml
src/majordome-diffusion/src/: diffusivity.rs  lib.rs
src/majordome-handlers/: Cargo.toml
src/majordome-handlers/src/: lib.rs  pybind.rs
src/majordome-handlers/src/core/: declarations.rs  mod.rs
src/majordome-handlers/src/elmer/: mod.rs
src/majordome-handlers/src/su2/: enums.rs  mod.rs  pybind.rs
src/majordome/calphad/: pybind.rs
src/majordome/combustion/: analysis.py  radiation.py
src/majordome/core/: mod.rs  pybind.rs
src/majordome/data/: airish.yaml  materials.yaml  wsgg.yaml
src/majordome/data/c2h2/: __init__.py  dalmazsi-2017.yaml  norinaga-2009.yaml
src/majordome/data/latex/: beamer-minimal.tex
src/majordome/diffusion/: diffusivity.rs  mod.rs  pybind.rs  slycke.rs
src/majordome/scripts/: containerize.rs
src/majordome/simulation/: fluent.py
src/majordome/src/: lib.rs  pybind.rs
src/majordome/src/elmer/: pybind.rs
src/majordome/src/su2/: pybind.rs
src/majordome/su2/: __init__.py  enums.py  enums.rs  groups.py  mesh.py  mod.rs  pybind.rs  test.rs  traits.rs
src/majordome/utils/: mod.rs  types.rs
src/thermo/: Cargo.toml  README.md  TODO.md  calphad.qmd  data.lua  devel.py  lib.rs  samples.ps1  usage.rs
src/thermo/data/: data.lua  hallstedt1990.lua  nasa.lua
src/thermo/sample/: autodiff_evaluation.rs  composition_tabulation.rs  equilibrium_evaluation.rs  hallstedt1990.rs  species_tabulation.rs  thermo_evaluation.rs  usage.rs
src/thermo/src/: core.rs  data.rs  equil.rs  lib.rs
src/walang/: __init__.py  logger.py  modules.py
temp/from-learning/jupyter-kernel-openmodelica/: LICENSE.txt  README.rst  release.py  setup.cfg
temp/from-learning/jupyter-kernel-openmodelica/sample/: .gitignore  (+1 more)
temp/from-learning/python-majordome/: .gitignore  00-System-Congruent-Melting.ipynb  01-System-Binary-Diagrams.ipynb  README.rst  release.py  setup.cfg
temp/from-learning/python-rotary-kiln/: .gitignore  MANIFEST.in  Makefile  README.md  setup.cfg
(+1618 files in other folders)
