[package]
name = "majordome"
description = "General utilities for scientific Python and numerical simulation."
repository = "https://github.com/wallytutor/python-majordome.git"
license-file = "LICENSE"
version = "1.0.1"
edition = "2024"
build = "build.rs"

[lib]
name = "_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.28.2"
features = [
    "extension-module",
    "abi3-py312",
    "multiple-pymethods",
    "auto-initialize"
]

[dependencies.mlua]
version = "0.11"
features = ["lua54", "vendored"]

[dependencies.serde_json]
version = "1"
