[package]
name = "majordome"
description = "General utilities for scientific Python and numerical simulation."
repository = "https://github.com/wallytutor/python-majordome.git"
license-file = "LICENSE"
version = "1.2.0"
edition = "2024"
build = "src/build.rs"

[lib]
name = "_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
majordome_calphad = { path = "crates/calphad" }
majordome_constants = { path = "crates/constants" }
majordome_diffusion = { path = "crates/diffusion" }
majordome_fvm = { path = "crates/fvm" }
majordome_numerical = { path = "crates/numerical" }
majordome_utilities = { path = "crates/utilities" }
majordome_plotting = { path = "crates/plotting" }

[dependencies.pyo3]
version = "0.28.2"
features = ["extension-module", "abi3-py312", "multiple-pymethods"]

[dependencies.mlua]
version = "0.11"
features = ["lua54", "vendored"]

[dependencies.serde_json]
version = "1"

# [[bin]]
# name = "usage"
# path = "src/core/calphad/usage.rs"
