[package]
name = "majordome"
description = "General utilities for scientific Python and numerical simulation."
repository = "https://github.com/wallytutor/python-majordome.git"
license-file = "LICENSE"
version = "1.2.0"
edition = "2024"
build = "src/build.rs"

[lib]
name = "_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
majordome_constants = { git = "https://github.com/wallytutor/majordome-constants.git", package = "majordome-constants" }
majordome_numerical = { git = "https://github.com/wallytutor/majordome-numerical.git", package = "majordome-numerical" }
majordome_utilities = { git = "https://github.com/wallytutor/majordome-utilities.git", package = "majordome-utilities" }
majordome_calphad = { git = "https://github.com/wallytutor/majordome-calphad.git", package = "majordome-calphad" }
majordome_equations = { git = "https://github.com/wallytutor/majordome-equations.git", package = "majordome-equations" }

# For local development (avoid cloning, do not commit this)
# majordome_constants = { path = "../majordome-constants" }
# majordome_numerical = { path = "../majordome-numerical" }
# majordome_utilities = { path = "../majordome-utilities" }
# majordome_calphad = { path = "../majordome-calphad" }
# majordome_equations = { path = "../majordome-equations" }

[dependencies.pyo3]
version = "0.28.2"
features = ["extension-module", "abi3-py312", "multiple-pymethods"]

[dependencies.mlua]
version = "0.11"
features = ["lua54", "vendored"]

[dependencies.serde_json]
version = "1"
