# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# https://setuptools-rust.readthedocs.io/en/latest/
[build-system]
requires = [
    "setuptools>=80",
    "setuptools-rust>=1.12",
    "wheel>=0.45.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "majordome"
dynamic = ["version"]
dependencies = []
requires-python = ">=3.12"
authors = [
  {name = "Walter Dal'Maz Silva", email = "walter.dalmazsilva@gmail.com"},
]
description = "General utilities for scientific Python and numerical simulation."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["scientific", "simulation", "utilities", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/wallytutor/python-majordome"
Documentation = "https://wallytutor.github.io/python-majordome/"
Repository = "https://github.com/wallytutor/python-majordome.git"
Issues = "https://github.com/wallytutor/python-majordome/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["majordome*"]
exclude = ["majordome_bindings"]
namespaces = false

##############################################################################
# DATA
##############################################################################

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"majordome" = [
    "data/*.yaml",
    "data/*/*.yaml",
    "data/latex/*.tex"
]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

##############################################################################
# PEP621: notice that in the future as majordome (core) becomes a metapackage
# all sub-packages will provide their dependencies here. There might be some
# duplicate dependencies that SHALL agree between themselves.
##############################################################################

[project.optional-dependencies]
docs = [
    "docstring_parser>=0.17.0",
    "pygments>=2.19.2",

    # "quartodoc",
    # "griffe<0.40",
    # "jupytext>=1.17.3",
    # "myst-parser>=4.0.1",
    # "nbsphinx>=0.9.7",
    # "notebook>=7.4.5",
    # "numpydoc>=1.9.0",
    # "Sphinx>=8.1.3",
    # "sphinx-book-theme>=1.1.4",
    # "sphinxcontrib-bibtex>=2.6.5",
]
extras = [
    "jupyterlab>=4.4.6",
    "jupytext>=1.17.3",

    # The following are not really used, but applications often
    # require them, so pre-installing is a nice convenience.
    "beautifulsoup4>=4.12.2",
    "casadi>=3.7.2",
    "gradio>=6.3.0",
    "meshio>=5.3.5",
    "numba>=0.63.1",
    "opencv-python>=4.12.0.88",
    "polars[all]>=1.37",
    "python-pptx>=1.0.2",
    "tinydb>=4.8.2",
]

cartography = [
    "branca",
    "folium",
    "gpxpy",
    "numpy>=2,<2.4",
    "pandas[excel]>=2.2,<3",
]
engineering = [
    "cantera>=3",
    "exifread>=3.5.1",
    "hyperspy>=2.3.0",
    "matplotlib>=3",
    "numpy>=2,<2.4",
    "tabulate>=0.9.0",
    "pandas[excel]>=2.2,<3",
    "pillow>=12.0.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15",
    "pyyaml>=6",
]
simulation = [
    "gmsh>=4.15,<5",
    "numpy>=2,<2.4",
    "pandas[excel]>=2.2,<3",
    "pyparsing>=3",
]
utilities = [
    "cantera>=3",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0,<=9.6.0",
    "matplotlib>=3",
    "numpy>=2,<2.4",
    "pandas[excel]>=2.2,<3",
    "pyvista[all]>=0.44",
    "tabulate>=0.9.0",
]

# These are optional for utilities:
utilities_pdftools = [
    # "pdfly>=0.5.1",
    "pdf2image>=1.17.0",
    "pypdf>=6.2.0",
    "pytesseract>=0.3.13",
]

full = [
    "beautifulsoup4>=4.12.2",
    "branca",
    "cantera>=3",
    "casadi>=3.7.2",
    "docstring_parser>=0.17.0",
    "exifread>=3.5.1",
    "folium",
    "gmsh>=4.15,<5",
    "gpxpy",
    "gradio>=6.3.0",
    "hyperspy>=2.3.0",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0,<=9.6.0",
    "jupyterlab>=4.4.6",
    "jupytext>=1.17.3",
    "matplotlib>=3",
    "meshio>=5.3.5",
    "numba>=0.63.1",
    "numpy>=2,<2.4",
    "opencv-python>=4.12.0.88",
    "pandas[excel]>=2.2,<3",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "polars[all]>=1.37",
    "pygments>=2.19.2",
    "pyparsing>=3",
    "pypdf>=6.2.0",
    "pytesseract>=0.3.13",
    "python-pptx>=1.0.2",
    "pyvista[all]>=0.44",
    "pyyaml>=6",
    "scikit-image>=0.25.2",
    "scipy>=1.15",
    "tabulate>=0.9.0",
    "tinydb>=4.8.2",
]

##############################################################################
# CRATES (BINARIES)
##############################################################################

[tool.setuptools-rust]
bindings = "bin"

[[tool.setuptools-rust.bins]]
target = "containerize"
path = "Cargo.toml"

[[tool.setuptools-rust.bins]]
target = "majordome"
path = "Cargo.toml"

##############################################################################
# CRATES (MODULES)
##############################################################################

[[tool.setuptools-rust.ext-modules]]
target = "majordome_utilities._majordome"
path = "Cargo.toml"
binding = "PyO3"

##############################################################################
# EOF
##############################################################################