# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# https://setuptools-rust.readthedocs.io/en/latest/
[build-system]
requires = [
    "setuptools>=80",
    "setuptools-rust>=1.12",
    "wheel>=0.45.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "majordome"
dynamic = ["version"]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "branca",
    "cantera>=3",
    "casadi>=3.7.2",
    "docstring_parser>=0.17.0",
    "exifread>=3.5.1",
    "folium",
    "gmsh>=4.15,<5",
    "gpxpy",
    "gradio>=6.3.0",
    "hyperspy>=2.3.0",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0,<=9.6.0",
    "jupyter-cache",
    "jupyter-client",
    "jupyterlab>=4.4.6",
    "jupytext>=1.17.3",
    "matplotlib>=3",
    "meshio>=5.3.5",
    "numba>=0.63.1",
    "numpy>=2,<2.4",
    "opencv-python>=4.12.0.88",
    "pandas[excel]>=2.2,<3",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "polars[all]>=1.37",
    "pygments>=2.19.2",
    "pyparsing>=3",
    "pypdf>=6.2.0",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "python-pptx>=1.0.2",
    "pyvista[all]>=0.44",
    "pyyaml>=6",
    "scikit-image>=0.25.2",
    "scipy>=1.15",
    "tabulate>=0.9.0",
    "tinydb>=4.8.2",
]
requires-python = ">=3.12"
authors = [
  {name = "Walter Dal'Maz Silva", email = "walter.dalmazsilva@gmail.com"},
]
description = "General utilities for scientific Python and numerical simulation."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["scientific", "simulation", "utilities", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/wallytutor/python-majordome"
Documentation = "https://wallytutor.github.io/python-majordome/"
Repository = "https://github.com/wallytutor/python-majordome.git"
Issues = "https://github.com/wallytutor/python-majordome/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["majordome*"]
exclude = ["majordome_bindings"]
namespaces = false

##############################################################################
# DATA
##############################################################################

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"majordome" = [
    "data/**/*.yaml",
    "data/latex/*.tex",
]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

##############################################################################
# PEP621 OPTIONAL DEPENDENCIES
##############################################################################

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
]

full = [
    # For documentation:
    "jupyter-cache",
    "jupyter-client",
    "docstring_parser>=0.17.0",
    "pygments>=2.19.2",

    # Most of the time you work here:
    "jupyterlab>=4.4.6",
    "jupytext>=1.17.3",

    # The following are not really used, but applications often
    # require them, so pre-installing is a nice convenience.
    "beautifulsoup4>=4.12.2",
    "gradio>=6.3.0",
    "meshio>=5.3.5",
    "numba>=0.63.1",
    "opencv-python>=4.12.0.88",
    "polars[all]>=1.37",
    "python-pptx>=1.0.2",
    "tinydb>=4.8.2",
]

##############################################################################
# SETUPTOOLS-RUST
##############################################################################

[[tool.setuptools-rust.bins]]
target = "containerize"
path = "bindings/rust/Cargo.toml"

[[tool.setuptools-rust.bins]]
target = "majordome"
path = "bindings/rust/Cargo.toml"

[[tool.setuptools-rust.ext-modules]]
target = "majordome._majordome"
path = "bindings/rust/Cargo.toml"
binding = "PyO3"

##############################################################################
# EOF
##############################################################################