[project]
name = "majordome"
version = "1.1.0"
description = "General utilities for scientific Python and numerical simulation."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Walter Dal'Maz Silva", email = "walter.dalmazsilva@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "branca>=0.8.2",
    "cantera>=3.2.0",
    "casadi>=3.7.2",
    "docstring-parser>=0.18.0",
    "exifread>=3.5.1",
    "folium>=0.20.0",
    "gmsh>=4.15.2",
    "gpxpy>=1.6.2",
    "hyperspy>=2.4.0",
    "ipython>=9.13.0",
    "markdown-it-py>=4.0.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas[excel]>=3.0.2",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pygments>=2.20.0",
    "pyparsing>=3.3.2",
    "pypdf>=6.10.2",
    "pytesseract>=0.3.13",
    "pyvista[all]>=0.47.3",
    "ruamel-yaml>=0.19.1",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
    "tabulate>=0.10.0",
]
keywords = ["scientific", "simulation", "utilities", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
containerize = "majordome.entrypoints:containerize"
majordome = "majordome.entrypoints:majordome"

[project.urls]
Homepage = "https://github.com/wallytutor/python-majordome"
Documentation = "https://wallytutor.github.io/python-majordome/"
Repository = "https://github.com/wallytutor/python-majordome.git"
Issues = "https://github.com/wallytutor/python-majordome/issues"

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
]
docs = [
    "ipykernel>=7.2.0",
    "jupyter-cache>=1.0.1",
    "jupyter-client>=8.8.0",
    "pythonnet>=3.0.5",
]
recommended = [
    "beautifulsoup4>=4.14.3",
    "gradio>=6.13.0",
    "jupyterlab>=4.5.6",
    "jupytext>=1.19.1",
    "meshio>=5.3.5",
    "numba>=0.65.1",
    "opencv-python>=4.13.0.92",
    "polars>=1.40.1",
    "python-pptx>=1.0.2",
    "tinydb>=4.8.2",
]

[tool.maturin]
module-name = "majordome._core"
python-packages = ["majordome"]
python-source = "."

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" }
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
