[package]
name = "majordome"
version = "0.8.0"
edition = "2024"
build = "build.rs"

[dependencies]
pyo3 = "0.27.0"

[lib]
name = "majordome"
crate-type = ["cdylib", "rlib"]
path = "majordome/lib.rs"

# XXX: multiple binaries in a single crate, just add [[bin]] sections.
[[bin]]
name = "containerize"
path = "majordome/scripts/containerize.rs"

[[bin]]
name = "majordome"
path = "majordome/scripts/majordome.rs"