[package]
name = "majordome"
version = "1.0.1"
edition = "2024"
build = "build.rs"

[dependencies.pyo3]
version = "0.28.2"
features = ["multiple-pymethods", "auto-initialize"]

[dependencies.serde_json]
version = "1"

# [dependencies.mlua]
# version = "0.11"
# features = ["lua54", "vendored"]

[lib]
name = "majordome"
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

# XXX: multiple binaries in a single crate, just add [[bin]] sections.
[[bin]]
name = "containerize"
path = "scripts/containerize.rs"

[[bin]]
name = "majordome"
path = "scripts/majordome.rs"
