[package]
name = "majordome_calphad"
version = "0.1.0"
edition = "2024"

[lib]
name = "majordome_calphad"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
majordome_constants = { path = "../constants" }
majordome_numerical = { path = "../numerical" }
majordome_utilities = { path = "../utilities" }

[dependencies.pyo3]
version = "0.28.2"
features = ["extension-module", "abi3-py312", "multiple-pymethods"]

[dependencies.mlua]
version = "0.11"
features = ["lua54", "vendored"]
