[package]
name = "corelib"
version = "0.7.1"
edition = "2024"

[lib]
name = "corelib"
crate-type = ["cdylib", "rlib"]

# XXX: multiple binaries in a single crate, just add [[bin]] sections.
[[bin]]
name = "containerize"
path = "src/bin/containerize.rs"

[[bin]]
name = "majordome"
path = "src/bin/majordome.rs"

[package.metadata.maturin]
name = "majordome.corelib"
bindings = "pyo3"

[dependencies]
pyo3 = "0.27.0"
