[package]
name = "majordome"
version = "0.8.0"
edition = "2024"
build = "build.rs"

[dependencies]
pyo3 = "0.27.0"

[lib]
name = "majordome"
crate-type = ["cdylib", "rlib"]

# XXX: multiple binaries in a single crate, just add [[bin]] sections.
[[bin]]
name = "containerize"
path = "src/bin/containerize.rs"

[[bin]]
name = "majordome"
path = "src/bin/majordome.rs"