[package]
name = "thermo"
version = "0.1.0"
edition = "2024"

[lib]
name = "thermo"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]

[dependencies.pyo3]
version = "0.28.2"
features = ["extension-module", "abi3-py312", "multiple-pymethods"]

[dependencies.mlua]
version = "0.11"
features = ["lua54", "vendored"]

[[bin]]
name = "usage"
path = "usage.rs"
