[metadata]
name = majordome
version = attr: majordome.version.version
url = https://github.com/WallyTutor/learning-scientific-computing/tree/main/tools/python-majordome
download_url = https://github.com/WallyTutor/learning-scientific-computing/tree/main/tools/python-majordome
project_urls =
    Repository = https://github.com/WallyTutor/learning-scientific-computing/tree/main/tools/python-majordome
author = "Walter Dal'Maz Silva"
author_email = walter.dalmazsilva@gmail.com
maintainer = "Walter Dal'Maz Silva"
maintainer_email = walter.dalmazsilva@gmail.com
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Build Tools
    Topic :: Software Development
    Topic :: System :: Shells
license = MIT
license_files = LICENSE
description = General utilities for scientific Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    Data Science
    Numerical Simulation
    Scientific Computing
    Utilities
platforms =
    Any
requires =
    cantera (>=2.6.0)
    imageio (>=2.20.0)
    numba (>=0.53.1)
    numpy (>=1.19.5)
    OpenPIV (>=0.24.2)
    pandas (>=1.3.0)
    requests (>=2.25.1)

[options]
zip_safe = False
setup_requires =
    setuptools
    wheel
install_requires =
    cantera>=2.6.0
    imageio>=2.20.0
    numba>=0.53.1
    numpy>=1.19.5
    OpenPIV>=0.24.2
    pandas>=1.3.0
    requests>=2.25.1
python_requires = >=3.10
include_package_data = False
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[bdist_wheel]
universal = 0

[flake8]
exclude = docs

[aliases]
test = pytest
