[metadata]
name = rotary_kiln
version = attr: rotary_kiln.version.version
url = https://github.com/WallyTutor/learning-scientific-computing/tree/main/tools/python-rotary-kiln
download_url = https://github.com/WallyTutor/learning-scientific-computing/tree/main/tools/python-rotary-kiln
project_urls =
    Repository = https://github.com/WallyTutor/learning-scientific-computing/tree/main/tools/python-rotary-kiln
author = "Walter Dal'Maz Silva"
author_email = walter.dalmazsilva@gmail.com
maintainer = "Walter Dal'Maz Silva"
maintainer_email = walter.dalmazsilva@gmail.com
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Build Tools
    Topic :: Software Development
    Topic :: System :: Shells
license = MIT
license_files = LICENSE
description = Rotary kiln simulation tools.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    Data Science
    Industrial Applications
    Numerical Simulation
    Scientific Computing
    Utilities
platforms =
    Any
requires =
    cantera (>=2.6.0)
    casadi (>=3.5.5)
    keras (>=2.9.0)
    majordome (>=0.2.0)
    matplotlib (>=3.5.2)
    numpy (>=1.22.4)
    pandas (>=1.3.0)
    pyyaml (>=6.0)
    scipy (>=1.9.0)

[options]
zip_safe = False
setup_requires =
    setuptools
    wheel
install_requires =
    cantera>=2.6.0
    casadi>=3.5.5
    keras>=2.9.0
    majordome>=0.2.0
    matplotlib>=3.5.2
    numpy>=1.22.4
    pandas>=1.3.0
    pyyaml>=6.0
    scipy>=1.9.0
python_requires = >=3.10
include_package_data = True
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
exclude =
    docs*
    dossiers*
    legacy*

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest
