[metadata]
name = kernel_scilab
version = attr: kernel_scilab.__version__
url = https://github.com/WallyTutor/learning-scientific-computing/tree/main/tools/jupyter-kernel-scilab
download_url = https://github.com/WallyTutor/learning-scientific-computing/tools/jupyter-kernel-scilab
project_urls =
    Repository = https://github.com/WallyTutor/learning-scientific-computing/tools/jupyter-kernel-scilab
author = Steven Silvester
author_email = steven.silvester@ieee.org
maintainer = "Walter Dal'Maz Silva"
maintainer_email = walter.dalmazsilva@gmail.com
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: System :: Shells
license = MIT
license_files = LICENSE.txt
description = A Jupyter kernel for Scilab.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    Scientific computing
    Computing platform
platforms =
    Any
requires =
    ipykernel
    jupyter_client (>=4.3.0)
    majordome (>=0.3.0)
    metakernel (>=0.23.0)
    numpy (>=1.22.4)

[options]
zip_safe = False
setup_requires =
    setuptools
    wheel
install_requires =
    ipykernel
    jupyter_client>=4.3.0
    majordome>=0.3.0
    metakernel>=0.23.0
    numpy >=1.22.4
python_requires = >=3.10
include_package_data = True
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
kernel_scilab =
    data/*.json
    data/*.png
    data/*.sci

[options.data_files]
share/jupyter/kernels/kernel_scilab =
    src/kernel_scilab/data/kernel.json
    src/kernel_scilab/data/*.png
